// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
AdoptionApplication: Records applications for turtle adoption.
Turtle: Represents individual turtles in the farm.
FeedingSchedule: Schedule that details feeding times for turtles.
Habitat: Represents habitats designed for specific turtle species.
HealthCheck: Records health checks conducted on turtles.
Pond: Represents ponds where turtles reside.
ResearchProject: Research projects associated with the turtle farm.
Staff: Represents staff members taking care of turtles.
SupplyInventory: Manages inventory of supplies for the farm.
TurtleCareLog: Records the care activities administered to turtles.
Visitor: Tracks visitors attending the turtle farm.
Volunteer: Details of volunteers assisting in the farm.
'''
}

Table AdoptionApplication {
    id INTEGER [primary key]
    turtle_id INTEGER 
    applicant_name VARCHAR 
    application_date DATETIME 
    }

Table Turtle {
    id INTEGER [primary key]
    name VARCHAR 
    species VARCHAR 
    birth_date DATETIME 
    weight FLOAT 
    }

Table FeedingSchedule {
    id INTEGER [primary key]
    turtle_id INTEGER 
    feed_time DATETIME 
    food_type VARCHAR 
    }

Table Habitat {
    id INTEGER [primary key]
    name VARCHAR 
    climate VARCHAR 
    size FLOAT 
    }

Table HealthCheck {
    id INTEGER [primary key]
    turtle_id INTEGER 
    check_date DATETIME 
    notes VARCHAR 
    }

Table Pond {
    id INTEGER [primary key]
    name VARCHAR 
    water_type VARCHAR 
    size FLOAT 
    }

Table ResearchProject {
    id INTEGER [primary key]
    name VARCHAR 
    start_date DATETIME 
    description VARCHAR 
    }

Table Staff {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    hire_date DATETIME 
    role VARCHAR 
    }

Table SupplyInventory {
    id INTEGER [primary key]
    item_name VARCHAR 
    quantity INTEGER 
    restock_date DATETIME 
    }

Table TurtleCareLog {
    id INTEGER [primary key]
    turtle_id INTEGER 
    date DATETIME 
    activity VARCHAR 
    }

Table Visitor {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    visit_date DATETIME 
    }

Table Volunteer {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    join_date DATETIME 
    task VARCHAR 
    }



// Relationships
    Ref: AdoptionApplication.(turtle_id) < Turtle.(id)
    Ref: FeedingSchedule.(turtle_id) < Turtle.(id)
    Ref: HealthCheck.(turtle_id) < Turtle.(id)
    Ref: TurtleCareLog.(turtle_id) < Turtle.(id)
